Progress on 1010 objectives, pandoc filter for tags.

--- a/reconsidered/Makefile
+++ b/reconsidered/Makefile
@@ -1,9 +1,9 @@
 all: COMP1010.html COMP1010.pdf
 
-COMP1010.html: COMP1010.md
-	pandoc COMP1010.md -o COMP1010.html -F ./tag.py --number-sections --number-offset=1009 --standalone
+COMP1010.html: COMP1010.md tag.py
+	pandoc COMP1010.md -o COMP1010.html -F ./tag.py --number-sections --number-offset=1009 --standalone 
 
-COMP1010.pdf: COMP1010.md
+COMP1010.pdf: COMP1010.md tag.py
 	pandoc COMP1010.md -o COMP1010.pdf -F ./tag.py --number-sections --pdf-engine=xelatex 
 
 clean:
