Trying to figure out how to organize things in a structured way.

--- a/reconsidered/Makefile
+++ b/reconsidered/Makefile
@@ -1,8 +1,8 @@
 %.html: %.md tag.py
-	pandoc $< -o $@ -F ./tag.py --number-sections --standalone 
+	pandoc $< -o $@ -F ./tag.py --number-sections --standalone --section-divs
 
 %.pdf: %.md tag.py
-	pandoc $< -o $@ -F ./tag.py --number-sections --pdf-engine=xelatex
+	pandoc $< -o $@ -F ./tag.py --number-sections --pdf-engine=xelatex --section-divs
 
 all: COMP1010.html COMP1010.pdf COMP1020.html COMP1020.pdf
 
