Learning outcomes are colour coded.

--- a/reconsidered/Makefile
+++ b/reconsidered/Makefile
@@ -2,7 +2,7 @@
 	pandoc $< -o $@ -F ./tag.py --number-sections --standalone --toc --toc-depth 1 
 
 %.pdf: %.md tag.py
-	pandoc $< -o $@ -F ./tag.py --number-sections --pdf-engine=xelatex --section-divs
+	pandoc $< -o $@ -F ./tag.py --number-sections --pdf-engine=xelatex --toc --toc-depth 1
 
 all: COMP1010.html COMP1010.pdf COMP1020.html COMP1020.pdf
 
