First cut of COMP 1500.

--- a/reconsidered/Makefile
+++ b/reconsidered/Makefile
@@ -4,7 +4,7 @@
 %.pdf: %.md tag.py
 	pandoc $< -o $@ -F ./tag.py --number-sections --pdf-engine=xelatex --toc --toc-depth 1
 
-all: COMP1010.html COMP1010.pdf COMP1020.html COMP1020.pdf
+all: COMP1010.html COMP1010.pdf COMP1020.html COMP1020.pdf COMP1500.html COMP1500.pdf
 
 clean:
 	rm *.pdf *.html
