Remove multiple IDs for 1020, add some colours, work on pipeline.

--- a/reconsidered/Makefile
+++ b/reconsidered/Makefile
@@ -1,7 +1,7 @@
 SHELL   := /bin/bash
 SCRIPTS := group-by-outcome.py colour.py
 
-all: COMP1010.html COMP1010.pdf COMP1020.html COMP1500.html
+all: COMP1010.html COMP1010.pdf COMP1020.html COMP1500.html COMP1000.pdf COMP1000.html
 
 %.html: %-struct.md $(SCRIPTS)
 	pandoc $< -o $@ -F group-by-outcome.py -F colour.py --number-sections \
@@ -11,20 +11,32 @@ all: COMP1010.html COMP1010.pdf COMP1020.html COMP1500.html
 	pandoc $< -o $@ -F group-by-outcome.py -F colour.py --number-sections \
 		--standalone --toc --toc-depth 1 --pdf-engine=xelatex
 
-%-struct.md: %.md tags-to-attr.py
+%-struct.md: %.md tags-to-attr.py group-by-outcome.py
 	cat <(sed -n '/^---$$/,/^---$$/p' $<) \
 		<(pandoc $< -f markdown-auto_identifiers --reference-links \
-			     --reference-location=section -F tags-to-attr.py -t markdown) \
+			     --reference-location=section -F tags-to-attr.py \
+				 -F group-by-outcome.py -t markdown) \
 				 > $@
 
 # the extra `echo ""` is there because if there's no newline in between
 # files, pandoc gobbles up the header that's inserted
-COMP1000.html: COMP1010-struct.md COMP1020-struct.md COMP1500-struct.md 
+COMP1000.html: COMP1010-struct.md COMP1020-struct.md COMP1500-struct.md yamltitletoheaders.py
 	cat <(pandoc COMP1010-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) \
 		<(echo "") \
-	    <(pandoc COMP1020-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) | \
+	    <(pandoc COMP1020-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) \
+		<(echo "") \
+	    <(pandoc COMP1500-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) | \
 	pandoc -f markdown -F colour.py -o $@ --standalone --toc --toc-depth 2 -M 'title=COMP 1000' \
 		-M date=2020 -M author='Franklin Bristow'
+
+COMP1000.pdf: COMP1010-struct.md COMP1020-struct.md COMP1500-struct.md yamltitletoheaders.py
+	cat <(pandoc COMP1010-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) \
+		<(echo "") \
+	    <(pandoc COMP1020-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) \
+		<(echo "") \
+	    <(pandoc COMP1500-struct.md -F yamltitletoheaders.py --shift-heading-level-by=1 -t markdown) | \
+	pandoc -f markdown -F colour.py -o $@ --standalone --toc --toc-depth 2 -M 'title=COMP 1000' \
+		-M date=2020 -M author='Franklin Bristow' -M toccolor=blue -V header-includes="\\usepackage{fullpage}" --pdf-engine=xelatex
 
 clean:
 	rm -f *.pdf *.html *-struct.md
