Moving scripts, fixing numbering in appendices.

--- a/courses/Makefile
+++ b/courses/Makefile
@@ -1,7 +1,7 @@
 SHELL    = /bin/bash
 EXISTING = COMP1010 COMP1020 COMP1500
 COURSES  = $(EXISTING) COMP1000
-SCRIPTS  = tags-to-attr.py nameref.py colour.py 
+SCRIPTS  = ./scripts/tags-to-attr.py ./scripts/nameref.py ./scripts/colour.py 
 SHIFTED_EXISTING = $(addsuffix -shifted.md, $(EXISTING))
 TOCDEPTH = 3
 
@@ -14,12 +14,12 @@ all: html pdfs
 pdfs: $(addsuffix .pdf, $(COURSES))
 html: $(addsuffix .html, $(COURSES))
 
-%.html: %-struct.md colour.py
-	pandoc $< -o $@ -F colour.py --number-sections --standalone --toc \
+%.html: %-struct.md ./scripts/colour.py
+	pandoc $< -o $@ -F ./scripts/colour.py --number-sections --standalone --toc \
 		--toc-depth $(TOCDEPTH) --number-offset=$(@:COMP%.html=%)
 
-%.pdf: %-struct.md colour.py
-	pandoc $< -o $@ -F colour.py --number-sections --standalone --toc \
+%.pdf: %-struct.md ./scripts/colour.py
+	pandoc $< -o $@ -F ./scripts/colour.py --number-sections --standalone --toc \
 		--toc-depth $(TOCDEPTH) --pdf-engine=xelatex \
 		-V header-includes="\usepackage{tocstyle}" \
 		-V header-includes="\settocstylefeature{spaceafternumber}{0.5em}" \
@@ -28,26 +28,26 @@ html: $(addsuffix .html, $(COURSES))
 		-V header-includes="\setcounter{section}{$(@:COMP%.pdf=%)}" \
 		-V toccolor="blue"
 
-%-struct.md: %.md tags-to-attr.py group-by-outcome.py
+%-struct.md: %.md ./scripts/tags-to-attr.py ./scripts/group-by-outcome.py
 	cat <(sed -n '/^---$$/,/^---$$/p' $<) \
 		<(pandoc $< -f markdown-auto_identifiers --reference-links \
-			     --reference-location=section -F tags-to-attr.py \
-				 -F group-by-outcome.py -t markdown) \
+			     --reference-location=section -F ./scripts/tags-to-attr.py \
+				 -F ./scripts/group-by-outcome.py -t markdown) \
 		> $@
 
-%-shifted.md: %-struct.md yamltitletoheaders.py
-	pandoc $< -F yamltitletoheaders.py --shift-heading-level-by=2 -t markdown \
+%-shifted.md: %-struct.md ./scripts/yamltitletoheaders.py
+	pandoc $< -F ./scripts/yamltitletoheaders.py --shift-heading-level-by=2 -t markdown \
 			  -o $@
 
 COMP1000.html: COMP1000.md appendix.md $(SHIFTED_EXISTING) $(SCRIPTS)
 	pandoc COMP1000.md appendix.md $(SHIFTED_EXISTING) $(addprefix -F , $(SCRIPTS)) -o $@ \
-			-F missing.py \
+			-F ./scripts/missing.py \
 			--number-sections --standalone --toc --toc-depth $(TOCDEPTH) \
 			--number-offset=1000
 
 COMP1000.pdf: COMP1000.md appendix.tex $(SHIFTED_EXISTING) $(SCRIPTS)
 	pandoc COMP1000.md appendix.tex $(SHIFTED_EXISTING) $(addprefix -F , $(SCRIPTS)) -o $@ \
-			-F missing.py \
+			-F ./scripts/missing.py \
 			--standalone --toc --toc-depth $(TOCDEPTH) --pdf-engine=xelatex \
 			-V header-includes="\usepackage{tocstyle}" \
 			-V header-includes="\settocstylefeature{spaceafternumber}{0.5em}" \
